<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:labelFor="@id/name_edit_text_view"
                android:text="@string/name"
                style="@style/HeaderTextStyle"/>
            <EditText
                android:id="@+id/name_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textCapWords"/>

        </LinearLayout>

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>
        <CheckBox
            android:id="@+id/has_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="8dp"
            android:textSize="16sp"/>
        <CheckBox
            android:id="@+id/has_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>
        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="incrementQuantity"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="#000000"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:onClick="decrementQuantity"/>

        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="onSubmit"/>

    </LinearLayout>
</ScrollView>